<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacVendorSearch</string>
    <string name="about">About</string>
    <string name="mac">MAC-address</string>
    <string name="address">__:__:__:__:__:__</string>
    <string name="search">Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">Result</string>
    
     <string name="Author">Author: Anton Dudakov</string> 
 	 <string name="email_label">E-mail:</string> 
 	 <string name="email">anton.dudakov@gmail.com</string>
    <string name="urlstring">http://www.macvendorlookup.com/api/v2/</string>


</resources>