<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

	<ScrollView
	    android:id="@+id/scrollView1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="vertical" >

	        <TextView
	            android:id="@+id/AuthorText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:text="@string/Author" />

	        <LinearLayout
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/EmailLabelText"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/email_label" />

	            <TextView
	                android:id="@+id/emailtext"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:autoLink="email"
	                android:text="@string/email" />
	        </LinearLayout>

	        <Button
	            android:id="@+id/dialogButtonOK"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="5dp"
	            android:layout_marginTop="5dp"
	            android:text=" Ok " />
	    </LinearLayout>

	</ScrollView>

</LinearLayout>