<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MacVendorSearch" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/mac"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/address"
        android:layout_margin="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
        android:id="@+id/searchbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address"
        android:layout_centerHorizontal="true"
        android:text="@string/search" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
        
        <LinearLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            
            <ImageButton 
                android:id="@+id/button0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="0"
                android:src="@drawable/imgi0" />
            
            <ImageButton
                android:id="@+id/button1" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="0"
                android:src="@drawable/imgi1" />

            <ImageButton 
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="2"
                android:src="@drawable/imgi2" />

            <ImageButton 
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="3"
                android:src="@drawable/imgi3" />            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            <ImageButton 
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="4"
                android:src="@drawable/imgi4" />
            
            <ImageButton 
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="5"
                android:src="@drawable/imgi5" />

            <ImageButton 
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="6"
                android:src="@drawable/imgi6" />

            <ImageButton 
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="7"
                android:src="@drawable/imgi7" />              
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            <ImageButton 
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="8"
                android:src="@drawable/imgi8" />
            
            <ImageButton 
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="9"
                android:src="@drawable/imgi9" />

            <ImageButton 
                android:id="@+id/buttona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="A"
                android:src="@drawable/imgia" />

            <ImageButton 
                android:id="@+id/buttonb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="B"
                android:src="@drawable/imgib" />              
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal" >
            <ImageButton 
                android:id="@+id/buttonc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="C"
                android:src="@drawable/imgic" />
            
            <ImageButton 
                android:id="@+id/buttond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="D"
                android:src="@drawable/imgid" />

            <ImageButton 
                android:id="@+id/buttone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="E"
                android:src="@drawable/imgie" />

            <ImageButton 
                android:id="@+id/buttonf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="F"
                android:src="@drawable/imgif" />              
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:gravity="center"
        	android:orientation="horizontal" >
            <ImageButton 
                android:id="@+id/buttonback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="back"
                android:src="@drawable/back" />            

            <ImageButton 
                android:id="@+id/buttonleft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="left"
                android:src="@drawable/left" />

            <ImageButton 
                android:id="@+id/buttonright"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tag="right"
                android:src="@drawable/right" />              
        </LinearLayout>
    </LinearLayout>
    

</RelativeLayout>